--- a/ProjetCSharp.csproj
+++ b/ProjetCSharp.csproj
@@ -58,6 +58,7 @@
     <Content Include="Data\Createcom.aspx" />
     <Content Include="Account\Login.aspx" />
     <Content Include="Account\Register.aspx" />
+    <Content Include="Data\Modifydoc.aspx" />
     <Content Include="Scripts\langs\en.js" />
     <Content Include="Scripts\langs\fr.js" />
     <Content Include="Scripts\license.txt" />
@@ -393,6 +394,13 @@
     </Compile>
     <Compile Include="Account\Register.aspx.designer.cs">
       <DependentUpon>Register.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Modifydoc.aspx.cs">
+      <DependentUpon>Modifydoc.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Data\Modifydoc.aspx.designer.cs">
+      <DependentUpon>Modifydoc.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
