Ajout du téléchargement de document en HTML

--- a/web.config
+++ b/web.config
@@ -45,7 +45,7 @@
           type="System.Web.Security.WindowsTokenRoleProvider" />
       </providers>
     </roleManager>
-
+     <httpRuntime requestValidationMode="2.0" />
   </system.web>
 
   <system.webServer>
