--- a/web.config
+++ b/web.config
@@ -7,9 +7,10 @@
 
 <configuration>
   <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
+      providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;Connect Timeout=30;User Instance=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
