--- a/web.config
+++ b/web.config
@@ -11,6 +11,10 @@
       providerName="System.Data.SqlClient" />
     <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;Connect Timeout=30;User Instance=True"
       providerName="System.Data.SqlClient" />
+    <add name="ConnectionString2" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+    <add name="ConnectionString3" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
