Mise a jour du module admin avec tous les champs qui sont remonté. Il manque la possibilité de mettre à jour.

--- a/ProjetCSharp.csproj
+++ b/ProjetCSharp.csproj
@@ -449,6 +449,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Images2\" />
+    <Folder Include="Images\" />
     <Folder Include="Scripts\plugins\spellchecker\classes\utils\" />
     <Folder Include="Scripts\plugins\spellchecker\includes\" />
   </ItemGroup>
