--- a/web.config
+++ b/web.config
@@ -15,6 +15,8 @@
       providerName="System.Data.SqlClient" />
     <add name="ConnectionString3" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient" />
+    <add name="ConnectionString4" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
